--- a/web/src/main/resources/templates/home.mustache
+++ b/web/src/main/resources/templates/home.mustache
@@ -16,6 +16,9 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- Custom styles -->
+    <link href="/css/hearts.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
