--- a/web/src/main/resources/templates/home.mustache
+++ b/web/src/main/resources/templates/home.mustache
@@ -23,8 +23,15 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="jumbotron">
             <h1>Hearts</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="text-center">
+            <form action="/games" method="POST">
+                <button type="submit" class="btn btn-primary btn-lg">New Game</button>
+            </form>
         </div>
     </div>
 </div>
