Add pretty cards

--- a/web/src/main/resources/templates/game.mustache
+++ b/web/src/main/resources/templates/game.mustache
@@ -19,6 +19,7 @@
 
     <!-- Custom styles -->
     <link href="/css/hearts.css" rel="stylesheet">
+    <link href="/css/cards.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -29,7 +30,25 @@
     </div>
     <div class="row">
       <div class="col-md-3">blank space</div>
-      <div class="col-md-6">Player 2 (AI)</div>
+      <div class="col-md-6 player player-2">
+          <p>Player 2 (AI)</p>
+          <div class="hand">
+              <div class="card rank10 H">10 <br/> &heartsuit;</div>
+              <div class="card rankJ H">J <br/> &heartsuit;</div>
+          </div>
+          <div class="hand">
+              <div class="card rank2 C">2 <br/> &clubsuit;</div>
+              <div class="card rank3 C">3 <br/> &clubsuit;</div>
+          </div>
+          <div class="hand">
+              <div class="card rank5 D">5 <br/> &diamondsuit;</div>
+              <div class="card rank6 D">6 <br/> &diamondsuit;</div>
+          </div>
+          <div class="hand">
+              <div class="card rank7 S">7 <br/> &spadesuit;</div>
+              <div class="card rankK S">K <br/> &spadesuit;</div>
+          </div>
+      </div>
       <div class="col-md-3">blank space</div>
     </div>
     <div class="row">
