--- a/web/src/main/resources/assets/css/cards.css
+++ b/web/src/main/resources/assets/css/cards.css
@@ -52,10 +52,26 @@
 .card:nth-of-type(3) { left: 14em; }
 .card:nth-of-type(4) { left: 21em; }
 .card:nth-of-type(5) { left: 28em; }
+.card:nth-of-type(6) { left: 35em; }
+.card:nth-of-type(7) { left: 42em; }
+.card:nth-of-type(8) { left: 49em; }
+.card:nth-of-type(9) { left: 56em; }
+.card:nth-of-type(10) { left: 63em; }
+.card:nth-of-type(11) { left: 70em; }
+.card:nth-of-type(12) { left: 77em; }
+.card:nth-of-type(13) { left: 84em; }
 
 /* Lay cards out in a stacked hand showing indices */
 .hand .card:nth-of-type(1) { left: 0; }
-.hand .card:nth-of-type(2) { left: 1em; }
-.hand .card:nth-of-type(3) { left: 2em; }
-.hand .card:nth-of-type(4) { left: 3em; }
-.hand .card:nth-of-type(5) { left: 4em; }
+.hand .card:nth-of-type(2) { left: 2em; }
+.hand .card:nth-of-type(3) { left: 4em; }
+.hand .card:nth-of-type(4) { left: 6em; }
+.hand .card:nth-of-type(5) { left: 8em; }
+.hand .card:nth-of-type(6) { left: 10em; }
+.hand .card:nth-of-type(7) { left: 12em; }
+.hand .card:nth-of-type(8) { left: 14em; }
+.hand .card:nth-of-type(9) { left: 16em; }
+.hand .card:nth-of-type(10) { left: 18em; }
+.hand .card:nth-of-type(11) { left: 20em; }
+.hand .card:nth-of-type(12) { left: 22em; }
+.hand .card:nth-of-type(13) { left: 24em; }
