--- a/web/src/main/resources/templates/game.mustache
+++ b/web/src/main/resources/templates/game.mustache
@@ -33,26 +33,42 @@
       <div class="col-md-6 player player-2">
           <p>Player 2 (AI)</p>
           <div class="hand">
-              <div class="card rank10 H">10 <br/> &heartsuit;</div>
-              <div class="card rankJ H">J <br/> &heartsuit;</div>
-          </div>
-          <div class="hand">
-              <div class="card rank2 C">2 <br/> &clubsuit;</div>
-              <div class="card rank3 C">3 <br/> &clubsuit;</div>
-          </div>
-          <div class="hand">
-              <div class="card rank5 D">5 <br/> &diamondsuit;</div>
-              <div class="card rank6 D">6 <br/> &diamondsuit;</div>
-          </div>
-          <div class="hand">
-              <div class="card rank7 S">7 <br/> &spadesuit;</div>
-              <div class="card rankK S">K <br/> &spadesuit;</div>
+                <div class="card rank4 H">4 <br/> &heartsuit;</div>
+                <div class="card rank9 C">9 <br/> &clubsuit;</div>
+                <div class="card rank5 D">5 <br/> &diamondsuit;</div>
+                <div class="card rank4 C">4 <br/> &clubsuit;</div>
+                <div class="card rank8 C">8 <br/> &clubsuit;</div>
+                <div class="card rankA H">A <br/> &heartsuit;</div>
+                <div class="card rank9 S">9 <br/> &spadesuit;</div>
+                <div class="card rank2 H">2 <br/> &heartsuit;</div>
+                <div class="card rank10 H">10 <br/> &heartsuit;</div>
+                <div class="card rank6 D">6 <br/> &diamondsuit;</div>
+                <div class="card rank7 C">7 <br/> &clubsuit;</div>
+                <div class="card rankA C">A <br/> &clubsuit;</div>
+                <div class="card rank7 H">7 <br/> &heartsuit;</div>
           </div>
       </div>
       <div class="col-md-3">blank space</div>
     </div>
     <div class="row">
-      <div class="col-md-3">Player 1 (AI)</div>
+      <div class="col-md-3 player player-1">
+        <p>Player 1 (AI)</p>
+            <div class="hand">
+                  <div class="card rankA S">A <br/> &spadesuit;</div>
+                  <div class="card rank2 S">2 <br/> &spadesuit;</div>
+                  <div class="card rank8 H">8 <br/> &heartsuit;</div>
+                  <div class="card rank5 H">5 <br/> &heartsuit;</div>
+                  <div class="card rankK D">K <br/> &diamondsuit;</div>
+                  <div class="card rank7 S">7 <br/> &spadesuit;</div>
+                  <div class="card rank3 C">3 <br/> &clubsuit;</div>
+                  <div class="card rank7 D">7 <br/> &diamondsuit;</div>
+                  <div class="card rank6 S">6 <br/> &spadesuit;</div>
+                  <div class="card rankA D">A <br/> &diamondsuit;</div>
+                  <div class="card rank3 S">3 <br/> &spadesuit;</div>
+                  <div class="card rank6 C">6 <br/> &clubsuit;</div>
+                  <div class="card rank6 H">6 <br/> &heartsuit;</div>
+            </div>
+      </div>
       <div class="col-md-6">
           <div class="row">
             <div class="col-md-4">blank space</div>
@@ -70,11 +86,45 @@
               <div class="col-md-4">blank space</div>
           </div>
       </div>
-      <div class="col-md-3">Player 3 (AI)</div>
+      <div class="col-md-3 player player-3">
+        <p>Player 3 (AI)</p>
+            <div class="hand">
+                  <div class="card rankJ D">J <br/> &diamondsuit;</div>
+                  <div class="card rankK S">K <br/> &spadesuit;</div>
+                  <div class="card rank8 D">8 <br/> &diamondsuit;</div>
+                  <div class="card rank2 C">2 <br/> &clubsuit;</div>
+                  <div class="card rankJ S">J <br/> &spadesuit;</div>
+                  <div class="card rankQ D">Q <br/> &diamondsuit;</div>
+                  <div class="card rank3 D">3 <br/> &diamondsuit;</div>
+                  <div class="card rankK C">K <br/> &clubsuit;</div>
+                  <div class="card rank4 S">4 <br/> &spadesuit;</div>
+                  <div class="card rankJ C">J <br/> &clubsuit;</div>
+                  <div class="card rank5 S">5 <br/> &spadesuit;</div>
+                  <div class="card rank8 S">8 <br/> &spadesuit;</div>
+                  <div class="card rank2 D">2 <br/> &diamondsuit;</div>
+            </div>
+      </div>
     </div>
     <div class="row">
       <div class="col-md-3">blank space</div>
-      <div class="col-md-6">you</div>
+      <div class="col-md-6 player you">
+        <p>you</p>
+          <div class="hand">
+              <div class="card rankQ H">Q <br/> &heartsuit;</div>
+              <div class="card rank5 C">5 <br/> &clubsuit;</div>
+              <div class="card rank10 C">10 <br/> &clubsuit;</div>
+              <div class="card rank4 D">4 <br/> &diamondsuit;</div>
+              <div class="card rank9 H">9 <br/> &heartsuit;</div>
+              <div class="card rankQ C">Q <br/> &clubsuit;</div>
+              <div class="card rank10 D">10 <br/> &diamondsuit;</div>
+              <div class="card rank10 S">10 <br/> &spadesuit;</div>
+              <div class="card rankJ H">J <br/> &heartsuit;</div>
+              <div class="card rankQ S">Q <br/> &spadesuit;</div>
+              <div class="card rankK H">K <br/> &heartsuit;</div>
+              <div class="card rank9 D">9 <br/> &diamondsuit;</div>
+              <div class="card rank3 H">3 <br/> &heartsuit;</div>
+          </div>
+      </div>
       <div class="col-md-3">blank space</div>
     </div>
 </div>
