--- a/web/src/main/resources/templates/game.mustache
+++ b/web/src/main/resources/templates/game.mustache
@@ -29,8 +29,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-3">blank space</div>
-      <div class="col-md-6 player player-2">
+      <div class="col-md-6 col-md-offset-3 player player-2">
           <p>Player 2 (AI)</p>
           <div class="hand">
                 <div class="card rank4 H">4 <br/> &heartsuit;</div>
@@ -48,12 +47,11 @@
                 <div class="card rank7 H">7 <br/> &heartsuit;</div>
           </div>
       </div>
-      <div class="col-md-3">blank space</div>
     </div>
     <div class="row">
-      <div class="col-md-3 player player-1">
+      <div class="col-md-2 col-md-offset-1 player player-1">
         <p>Player 1 (AI)</p>
-            <div class="hand">
+            <div class="hand vertical">
                   <div class="card rankA S">A <br/> &spadesuit;</div>
                   <div class="card rank2 S">2 <br/> &spadesuit;</div>
                   <div class="card rank8 H">8 <br/> &heartsuit;</div>
@@ -88,7 +86,7 @@
       </div>
       <div class="col-md-3 player player-3">
         <p>Player 3 (AI)</p>
-            <div class="hand">
+            <div class="hand vertical">
                   <div class="card rankJ D">J <br/> &diamondsuit;</div>
                   <div class="card rankK S">K <br/> &spadesuit;</div>
                   <div class="card rank8 D">8 <br/> &diamondsuit;</div>
@@ -106,8 +104,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-3">blank space</div>
-      <div class="col-md-6 player you">
+      <div class="col-md-6 col-md-offset-3 player you">
         <p>you</p>
           <div class="hand">
               <div class="card rankQ H">Q <br/> &heartsuit;</div>
@@ -125,7 +122,6 @@
               <div class="card rank3 H">3 <br/> &heartsuit;</div>
           </div>
       </div>
-      <div class="col-md-3">blank space</div>
     </div>
 </div>
 
