--- a/web/src/main/resources/templates/game.mustache
+++ b/web/src/main/resources/templates/game.mustache
@@ -25,7 +25,7 @@
 <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1>Hearts - <small>{{title}}} #{{gameId}} - Round 1</small></h1>
+        <h1>Hearts - <small>{{title}} #{{gameId}} - Round 1</small></h1>
       </div>
     </div>
     <div class="row">
